[package]
name = "pi_densevec"
version = "0.1.3"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "重定向映射表，一个使用usize作为key的映射表"
repository = "https://github.com/GaiaWorld/pi_densevec.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "dense", "vec"]

[dependencies]
pi_map = "0.2"